<resources>
    <string name="app_name">KabuSign</string>
    <string name="stock_select_hint">銘柄コード、銘柄名</string>
    <string name="monitored_stock_title">監視銘柄リスト</string>
    <string name="label_price_designation">価格指定</string>

    <string name="label_reference_designation">基準値差分指定</string>
    <string name="label_reference">基準値</string>
    <string-array name="reference_kind">
        <item>現在値</item>
        <item>前日終値</item>
        <item>前日始値</item>
        <item>前日高値</item>
        <item>前日安値</item>
    </string-array>

    <string name="label_target_price">差分価格</string>
    <string name="label_target_ratio">差分比率</string>

    <string name="price_designation_message_prefix">から</string>
    <string name="price_designation_message_suffix">になったら通知</string>

    <string name="hint_input">タップしてください</string>

    <string name="candle_style_title">ローソク足の形状</string>
    <string name="candle_style_shape_title">形状</string>
    <string name="candle_style_pattern_title">ローソク足のパターン</string>
    <string name="candle_style_pattern_title2">パターン</string>
    <string name="candle_style_main">陽 / 陰</string>
    <string-array name="candle_shape_info">
        <item>大陽線</item>
        <item>大陰線</item>
        <item>小陽線</item>
        <item>小陰線</item>
        <item>上影陽線</item>
        <item>上影陰線</item>
        <item>下影陽線</item>
        <item>下影陰線</item>
        <item>十字線</item>
    </string-array>
    <string-array name="candle_pattern_info">
        <item>包み陽線</item>
        <item>包み陰線</item>
        <item>はらみ陽線</item>
        <item>はらみ陰線</item>
        <item>かぶせ線</item>
        <item>切り込み線</item>
    </string-array>

    <string-array name="candle_main_info">
        <item>陽線</item>
        <item>陰線</item>
    </string-array>
    <string name="candle_body_size_title">大きさ</string>
    <string-array name="candle_body_size_info">
        <item>指定なし</item>
        <item>　大　</item>
        <item>　中　</item>
        <item>　小　</item>
    </string-array>
    <string name="candle_shadows_title">ヒゲ</string>
    <string name="candle_shadows_upper_title">上ヒゲ</string>
    <string name="candle_shadows_lower_title">下ヒゲ</string>
    <string-array name="candle_shadows_info">
        <item>指定なし</item>
        <item>　短　</item>
        <item>　中　</item>
        <item>　長　</item>
    </string-array>

    <string name="candle_value_title"><u>ローソク足の値</u></string>
    <string name="candle_open_title">始値</string>
    <string name="candle_close_title">終値</string>
    <string name="candle_high_title">高値</string>
    <string name="candle_low_title">安値</string>
    <string-array name="value_attr">
        <item>指定しない</item>
        <item>に等しい</item>
        <item>以上</item>
        <item>以下</item>
        <item>より大きい</item>
        <item>より小さい</item>
    </string-array>
    
    <string name="start_brackets">(</string>
    <string name="end_brackets">)</string>
    <string name="percent">%</string>

    <string name="label_high_value">高</string>
    <string name="label_low_value">安</string>
    <string name="label_open_value">始</string>
    <string name="label_close_value">終</string>
    <string name="label_volume">出来高</string>
    <string name="label_before_ratio">前日比</string>

    <string name="label_today">本日</string>
    <string name="label_tomorrow">翌日</string>
    <string name="label_year">年</string>
    <string name="label_month">月</string>
    <string name="label_days">日</string>

    <string name="label_period_start">開始日</string>
    <string name="label_period_end">終了日</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
