<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="net.ts_matsu.kabusign.viewmodel.CandleInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swCandleInfoEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@{viewModel.isEnable}"
            android:onCheckedChanged="@{(view, isChecked)->viewModel.onCheckedChange(isChecked)}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/candle_style_title"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/candle_body_size_title"/>
                <Spinner
                    android:id="@+id/spCandleBody"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@color/colorWhite"
                    android:entries="@array/candle_body_size_info"
                    android:selectedItemPosition="@={viewModel.candleBodyInfo}" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/candle_shadows_title"/>
                <Spinner
                    android:id="@+id/spCandleShadows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@color/colorWhite"
                    android:entries="@array/candle_shadows_info"
                    android:selectedItemPosition="@={viewModel.candleShadowsInfo}"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/candle_value_title"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/candle_open_title"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvOpenValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:maxLength="7"
                    android:textSize="20sp"
                    android:text="@={viewModel.openValue}"
                    android:onClick="@{() -> viewModel.setOnOpenValueClick()}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="円"
                    android:gravity="bottom"/>
                <Spinner
                    android:id="@+id/spOpen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="8dp"
                    android:entries="@array/value_attr"
                    android:selectedItemPosition="@={viewModel.openCondition}" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/candle_close_title"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvCloseValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:maxLength="7"
                    android:textSize="20sp"
                    android:text="@={viewModel.closeValue}"
                    android:onClick="@{() -> viewModel.setOnCloseValueClick()}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="円"
                    android:gravity="bottom"/>
                <Spinner
                    android:id="@+id/spClose"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="8dp"
                    android:entries="@array/value_attr"
                    android:selectedItemPosition="@={viewModel.closeCondition}" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/candle_high_title"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvHighValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:maxLength="7"
                    android:textSize="20sp"
                    android:text="@={viewModel.highValue}"
                    android:onClick="@{() -> viewModel.setOnHighValueClick()}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="円"
                    android:gravity="bottom"/>
                <Spinner
                    android:id="@+id/spHigh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="8dp"
                    android:entries="@array/value_attr"
                    android:selectedItemPosition="@={viewModel.highCondition}" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/candle_low_title"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLowValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:maxLength="7"
                    android:textSize="20sp"
                    android:text="@={viewModel.lowValue}"
                    android:onClick="@{() -> viewModel.setOnLowValueClick()}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="円"
                    android:gravity="bottom"/>
                <Spinner
                    android:id="@+id/spLow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorLightGray"
                    android:layout_marginLeft="8dp"
                    android:entries="@array/value_attr"
                    android:selectedItemPosition="@={viewModel.lowCondition}" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:gravity="right">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:background="#00000000"
                    android:textSize="18sp"
                    android:onClick="@{() -> viewModel.onNegativeButtonClick()}"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="    OK    "
                    android:background="#00000000"
                    android:textSize="18sp"
                    android:onClick="@{() -> viewModel.onPositiveButtonClick()}"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
